idf_component_register(
    SRCS 
        "clock.c"
        "canvas.c"
        "scene.c"
        "currency.c"
        "font/font_workbench_30num.c"
        "font/font_terminus_12.c"
        "font/font_micro_30num.c"
        "font/font.c"
    INCLUDE_DIRS 
        "."
    PRIV_REQUIRES 
        driver
        spiffs
        esp_lcd
        lvgl
        display
        nvs_flash
        data
        alarm
        storage
)