idf_component_register(
    SRCS 
        "clock.c"
        "canvas.c"
        "scene.c"
        "currency.c"
        "chip8.c"
    INCLUDE_DIRS 
        "."
    PRIV_REQUIRES 
        driver
        spiffs
        esp_lcd
        lvgl
        display
        nvs_flash
        data
        alarm
        storage
        keypad
)